--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index,follow">
   <meta name="description"
     content="Если вам необходимо провести демонтаж, обратитесь в компанию “ПИТЕР ДЕМОНТАЖ”. Быстро, аккуратно и недорого. Звонок менеджеру по телефону: +7 (812) 6-29-29-99.">
-  <title>Демонтажные услуги по доступной стоимости: квартиры, офисы, магазины. Снос домов. Вывоз мусора.  </title>
+  <title>Демонтажные услуги по доступной стоимости: квартиры, офисы, магазины. Снос домов. Вывоз мусора. </title>
   <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,115 +38,115 @@
       });
     });
   </script>
- 
+
 
 
 <body class="com_content view-article no-layout no-task itemid-101 home">
 
   <div id="maximenuck146-mobile" class="mobilemaximenuck ltr js_menu"
-  style="position: fixed; overflow: hidden auto; z-index: 100000; top: 0px; left: 0px; width: 300px; height: 100%; display: none;">
-  <div class="mobilemaximenucktopbar">
-    <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
-      class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
+    style="position: fixed; overflow: hidden auto; z-index: 100000; top: 0px; left: 0px; width: 300px; height: 100%; display: none;">
+    <div class="mobilemaximenucktopbar">
+      <div class="mobilemaximenucktitle mobilemaximenuckbackbutton" style="display: none;">Назад</div><span
+        class="mobilemaximenucktitle">Меню</span><span class="mobilemaximenuckclose js_close">×</span>
+    </div>
+    <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Демонтажные работы</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Снос домов</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Алмазная резка</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
+              class="mobiletextck">Алмазное бурение</span></a></div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
+              class="mobiletextck">Перепланировка</span></a></div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Вывоз мусора</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
+      </div>
+      <div class="mobilemaximenuckitem">
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Наши работы</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck level1">
-        <div class="maximenuck_item_mobile">
-          <span class="mobiletextck">Демонтажные работы</span>
-          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-              xml:space="preserve">
-              <g>
-                <path
-                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                  fill="#222" opacity="1" data-original="#000000"></path>
-              </g>
-            </svg></i>
-        </div>
-      </div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1">
-        <div class="maximenuck_item_mobile">
-          <span class="mobiletextck">Снос домов</span>
-          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-              xml:space="preserve">
-              <g>
-                <path
-                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                  fill="#222" opacity="1" data-original="#000000"></path>
-              </g>
-            </svg></i>
-        </div>
-      </div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1">
-        <div class="maximenuck_item_mobile">
-          <span class="mobiletextck">Алмазная резка</span>
-          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-              xml:space="preserve">
-              <g>
-                <path
-                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                  fill="#222" opacity="1" data-original="#000000"></path>
-              </g>
-            </svg></i>
-        </div>
-      </div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
-            class="mobiletextck">Алмазное бурение</span></a></div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
-            class="mobiletextck">Перепланировка</span></a></div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1">
-        <div class="maximenuck_item_mobile">
-          <span class="mobiletextck">Вывоз мусора</span>
-          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-              xml:space="preserve">
-              <g>
-                <path
-                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                  fill="#222" opacity="1" data-original="#000000"></path>
-              </g>
-            </svg></i>
-        </div>
-      </div>
-    </div>
-    <div class="mobilemaximenuckitem">
-      <div class="maximenuck  level1">
-        <div class="maximenuck_item_mobile">
-          <span class="mobiletextck">Наши работы</span>
-          <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
-              width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
-              xml:space="preserve">
-              <g>
-                <path
-                  d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
-                  fill="#222" opacity="1" data-original="#000000"></path>
-              </g>
-            </svg></i>
-        </div>
-      </div>
-    </div>
+  <div id="maximenuck146-mobilebarmaximenuck" class="mobilebarmaximenuck ltr" style="position:absolute"><span
+      class="mobilebarmenutitleck">Меню</span>
+    <div class="mobilebuttonmaximenuck js_button">≡</div>
   </div>
-</div>
-<div id="maximenuck146-mobilebarmaximenuck" class="mobilebarmaximenuck ltr" style="position:absolute"><span
-    class="mobilebarmenutitleck">Меню</span>
-  <div class="mobilebuttonmaximenuck js_button">≡</div>
-</div>
 
 
-  
+
   <header>
     <div class="k-one">
       <div class="container">
@@ -375,7 +375,7 @@
                           <a href="#" class="maximenuck_box_item">Кровля </a>
                           <a href="#" class="maximenuck_box_item">Фундамент </a>
                           <a href="#" class="maximenuck_box_item">Заборы </a>
-                          <a href="#" class="maximenuck_box_item">Металло-ция </a>
+                          <a href="#" class="maximenuck_box_item">Металоконстркуция </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
@@ -392,6 +392,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Алмазная резка </a>
                           <a href="#" class="maximenuck_box_item">Усиление </a>
+                          <a href="#" class="maximenuck_box_item">Штробление </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
@@ -411,11 +412,11 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
-                            <div class="maximenuck_box">
-                              <a href="#" class="maximenuck_box_item">Наш автопарк </a>
-                              <a href="#" class="maximenuck_box_item">Фасовка мусора </a>
-                              <a href="#" class="maximenuck_box_item">Спуск и погрузка мусора </a>
-                            </div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Наш автопарк </a>
+                          <a href="#" class="maximenuck_box_item">Фасовка мусора </a>
+                          <a href="#" class="maximenuck_box_item">Спуск и погрузка мусора </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Наши работы</span><i><svg
@@ -431,7 +432,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Фото</a>
                           <a href="#" class="maximenuck_box_item">Видео </a>
-                          <a href="#" class="maximenuck_box_item">Отзывы </a>
+                          <a href="#" class="maximenuck_box_item">Советы </a>
                           <a href="#" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
@@ -842,7 +843,7 @@
           <div class="custom">
             <div class="moduletable_tittle">Мы в соц. сетях:</div>
             <div class="b-page">
-              <a href="#" class="b-page__addition-item">
+              <a href="https://vk.com/piterdemontaj" class="b-page__addition-item" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512"
                   xml:space="preserve">
@@ -856,7 +857,7 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://ok.ru/demontajusluga" class="b-page__addition-item" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 176 176" style="enable-background:new 0 0 512 512"
                   xml:space="preserve">
@@ -875,7 +876,8 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A" class="b-page__addition-item"
+                target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 461.001 461.001"
                   style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -886,7 +888,7 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://www.avito.ru/brands/i81197078" class="b-page__addition-item" target="_blank">
                 <svg width="40" height="40" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="10.595" cy="5.225" r="3.325" fill="#965EEB"></circle>
                   <circle cx="22.245" cy="7.235" r="7.235" fill="#0AF"></circle>
@@ -894,7 +896,7 @@
                   <circle cx="24.325" cy="21.005" r="5.375" fill="#FF4053"></circle>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://rutube.ru/channel/36759236/about" class="b-page__addition-item" target="_blank">
                 <img src="./images/rutube.png" alt="img" width="30px" height="30px">
               </a>
             </div>
@@ -918,7 +920,7 @@
 
   <div class="b-top" id="scroller"><span class="b-top-but"> </span></div>
 
-  
+
 
 
 
