--- a/wall.html
+++ b/wall.html
@@ -356,7 +356,7 @@
                           <a href="#" class="maximenuck_box_item">Кровля </a>
                           <a href="#" class="maximenuck_box_item">Фундамент </a>
                           <a href="#" class="maximenuck_box_item">Заборы </a>
-                          <a href="#" class="maximenuck_box_item">Металло-ция </a>
+                          <a href="#" class="maximenuck_box_item">Металоконстркуция </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
@@ -373,6 +373,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Алмазная резка </a>
                           <a href="#" class="maximenuck_box_item">Усиление </a>
+                          <a href="#" class="maximenuck_box_item">Штробление </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
@@ -412,7 +413,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Фото</a>
                           <a href="#" class="maximenuck_box_item">Видео </a>
-                          <a href="#" class="maximenuck_box_item">Отзывы </a>
+                          <a href="#" class="maximenuck_box_item">Советы </a>
                           <a href="#" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
@@ -2744,7 +2745,7 @@
           <div class="custom">
             <div class="moduletable_tittle">Мы в соц. сетях:</div>
             <div class="b-page">
-              <a href="#" class="b-page__addition-item">
+              <a href="https://vk.com/piterdemontaj" class="b-page__addition-item" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512"
                   xml:space="preserve">
@@ -2758,7 +2759,7 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://ok.ru/demontajusluga" class="b-page__addition-item" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 176 176" style="enable-background:new 0 0 512 512"
                   xml:space="preserve">
@@ -2777,7 +2778,8 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A" class="b-page__addition-item"
+                target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
                   width="30" height="30" x="0" y="0" viewBox="0 0 461.001 461.001"
                   style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -2788,7 +2790,7 @@
                   </g>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://www.avito.ru/brands/i81197078" class="b-page__addition-item" target="_blank">
                 <svg width="40" height="40" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="10.595" cy="5.225" r="3.325" fill="#965EEB"></circle>
                   <circle cx="22.245" cy="7.235" r="7.235" fill="#0AF"></circle>
@@ -2796,7 +2798,7 @@
                   <circle cx="24.325" cy="21.005" r="5.375" fill="#FF4053"></circle>
                 </svg>
               </a>
-              <a href="#" class="b-page__addition-item">
+              <a href="https://rutube.ru/channel/36759236/about" class="b-page__addition-item" target="_blank">
                 <img src="./images/rutube.png" alt="img" width="30px" height="30px">
               </a>
             </div>
