--- a/contact.html
+++ b/contact.html
@@ -867,7 +867,7 @@
           </span>
         </span>
       </li>
-      <li class="sigProThumb">
+      <li class="sigProThumb" id="sovet">
         <span class="sigProLinkOuterWrapper">
           <span class="sigProLinkWrapper">
             <a href="./images/gallery/potolok/35.jpg" class="sigProLink fancybox-button"
