--- a/floor.html
+++ b/floor.html
@@ -412,7 +412,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Фото</a>
                           <a href="#" class="maximenuck_box_item">Видео </a>
-                          <a href="#" class="maximenuck_box_item">Советы </a>
+                          <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
                           <a href="#" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
@@ -1921,10 +1921,17 @@
     <div class="container">
       <h2>Видео наших работ</h2>
       <div class="video_flex">
-        <p><a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-            rel="noopener"><img class="youtube-link" src="./images/youtube-link.jpg" alt=""></a></p>
-        <p><a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
-            rel="noopener"><img class="youtube-link" src="./images/youtube-link.jpg" alt=""></a></p>
+        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
+          rel="noopener">
+          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <span>Демонтаж квартиры на Невском проспекте.
+            Квартира на 5 этаже + мансарда.</span>
+        </a>
+        <a href="https://www.youtube.com/channel/UCNsrry8-ONAWGuV06x6Su8A?view_as=subscriber" target="_blank"
+          rel="noopener">
+          <img class="youtube-link" src="./images/youtube-link.jpg" alt="">
+          <span> Видео отзыв </span>
+        </a>
       </div>
     </div>
   </section>
@@ -2036,8 +2043,10 @@
 
       <p><a class="link-box link-pdf" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
           data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
+      <p><a class="link-box link-pdf" href="./contact.html#sovet">Полезные советы </a></p>
       <a class="link-box link-pdf present" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
         data-fancybox-type="iframe">Подарочный сертификат </a>
+
     </div>
   </section>
 
