--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                         <div class="maximenuck_box">
                           <a href="#" class="maximenuck_box_item">Фото</a>
                           <a href="#" class="maximenuck_box_item">Видео </a>
-                          <a href="#" class="maximenuck_box_item">Советы </a>
+                          <a href="./contact.html#sovet" class="maximenuck_box_item">Советы </a>
                           <a href="#" class="maximenuck_box_item">Контакты </a>
                         </div>
                       </li>
